<resources>
    <string name="app_name">Extensions Demos</string>
    <string name="btn_reconnect">reconnect</string>
    <string name="tap_to_calibrate">Tap to calibrate</string>
    <string name="btn_about">Info</string>

    <string name="no_data">Undefined</string>
    <string name="service_version_label">Service version:</string>
    <string name="sdk_version_label">GemSDK version</string>
    <string name="gem_address_label">Gem address:</string>
    <string name="fw_revision_label">Gem firmware:</string>
    <string name="title_info">Info</string>
    <string name="toggle_d0">Toggle</string>
    <string name="d0_pin_toggle">D0 pin toggle:</string>
    <string name="read_a0">Read A0</string>
    <string name="read_d1">Read D1</string>
    <string name="write_pwm">Write PWM</string>
    <string name="disable_pwm">Disable PWM</string>
</resources>
